--- a/login/index.html
+++ b/login/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ot-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login-Helper</title>
-    <link rel="stylesheet" href="./css/style.css ">
+    <link rel="stylesheet" href="./css/styles.css ">
     <script src="./js/index.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +26,8 @@
 
                 <div class="password-container">
                     <input type="password" id="fiel-password" class="fiel-password" placeholder="******">
-                    <i></i>
-                    <i></i>
+                    <i class="fa-solid fa-eye"></i>
+                    <i class="fa-solid fa-eye-slash"></i>
                 </div>
             </section>
             
@@ -46,9 +46,9 @@
                 <span>Ou entre com:</span>
 
                 <aside>
-                    <a href="#"><i></i></a>
-                    <a href="#"><i></i></a>
-                    <a href="#"><i></i></a>
+                    <a href="#"><i class="fa-brands fa-google"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 </aside>
             </section>
 
