--- a/login/index.html
+++ b/login/index.html
@@ -26,8 +26,8 @@
 
                 <div class="password-container">
                     <input type="password" id="fiel-password" class="fiel-password" placeholder="******">
-                    <i class="fa-solid fa-eye"></i>
-                    <i class="fa-solid fa-eye-slash"></i>
+                    <i class="fa-solid fa-eye" id="eye"></i>
+                    <i class="fa-solid fa-eye-slash" id="noEye"></i>
                 </div>
             </section>
             
@@ -46,9 +46,9 @@
                 <span>Ou entre com:</span>
 
                 <aside>
-                    <a href="#"><i class="fa-brands fa-google"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-google google"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook facebook"></i></a>
                 </aside>
             </section>
 
