--- a/login/index.html
+++ b/login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login-Helper</title>
+    <title>Faça seu Login</title>
     <link rel="stylesheet" href="./css/styles.css ">
     <script src="./js/index.js" defer></script>
 
@@ -16,17 +16,17 @@
 </head>
 <body>
     <header>
-        <h1>Login-Helper</h1>
+        <h1>Faça seu Login</h1>
     </header>
     
     <main>
         <form>
             <section class="inputs-container">
-                <input type="email" placeholder="example@gmail.com">
+                <input type="email" placeholder="digite seu email">
 
                 <div class="password-container">
-                    <input type="password" id="fiel-password" class="fiel-password" placeholder="******">
-                    <i class="fa-solid fa-eye" id="eye"></i>
+                    <input type="password" id="field-password" class="field-password" placeholder="digite sua senha">
+                    <i class="fa-solid fa-eye" id="eye" onclick="showPassword"></i>
                     <i class="fa-solid fa-eye-slash" id="noEye"></i>
                 </div>
             </section>
